frontend/editor.css
/* ... */
pluto-trafficlight::after {
    content: "";
    /* Calc needs units everywhere to work */
    top: calc(0px - 10 * var(--patternHeight));
    left: 0;
    width: 100%;
    height: calc(100% + 10 * var(--patternHeight));
    position: absolute;
    opacity: 0;
}

/*
 * This class will toggle animation.
 * Other classes will make animation visible with opacity (which is CHEAP?)
 * 
 */
pluto-cell.activate_animation pluto-trafficlight::after {
    animation: 10s linear 0s infinite running scrollbackground;
}

/* in ascending order of severity: */
/* we need the :not(.___) to fix our CSS selector specificity when `body.disable_ui` */
body:not(.___) pluto-cell.code_folded > pluto-trafficlight {
    background: none;
}

@media screen and (any-pointer: fine) {
    body:not(.disable_ui) pluto-cell:hover > pluto-trafficlight {
        background: var(--normal-cell-color);
        transition: background 0.05s ease-in;
    }
}

body:not(.___) pluto-cell:focus-within > pluto-trafficlight {
    border-left-width: 4px;
    border-left-style: solid;
    margin-left: -4px;
    background-clip: padding-box;
    background-color: var(--normal-cell-color);
}

body:not(.___) pluto-cell.selected > pluto-trafficlight {
    background: var(--selected-cell-color);
    border-left-color: var(--selected-cell-color);
    background-clip: padding-box;
}

body:not(.___) pluto-cell.code_differs > pluto-trafficlight {
    background: var(--code-differs-cell-color);
    border-left-color: var(--code-differs-cell-color);
    background-clip: padding-box;
}

body:not(.___) pluto-cell.errored > pluto-trafficlight {
    background: var(--error-cell-color);
    border-left-color: var(--error-cell-color);
    background-clip: padding-box;
}

body:not(.___) pluto-cell.queued > pluto-trafficlight::after {
    background: repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 8px, var(--normal-cell-color) 8px, var(--normal-cell-color) 16px);
    background-clip: padding-box;
    /* [1]
    Queued, Running, Errored are really fast changing props.
    We make sure to on-off the gradients with opacity and not toggle the animation
    (Which is running all this time)
    Make sure the browser won't skip creating a stacking context
    https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Positioning/Understanding_z_index/The_stacking_context
    https://www.w3.org/TR/css-color-3/#transparency
    */
    opacity: 0.99;
    background-size: 4px var(--patternHeight);
    animation-duration: 20s;
}

body:not(.___) pluto-cell.running > pluto-trafficlight::after {
    background: repeating-linear-gradient(
        -45deg,
        var(--normal-cell-color),
        var(--normal-cell-color) 8px,
        var(--dark-normal-cell-color) 8px,
        var(--dark-normal-cell-color) 16px
    );
    background-clip: content-box;
    opacity: 0.99; /* [1] */
    background-size: 4px var(--patternHeight);
}

body:not(.___) pluto-cell.queued.errored > pluto-trafficlight::after {
    background: repeating-linear-gradient(
        -45deg,
        var(--light-error-cell-color),
        var(--light-error-cell-color) 8px,
        var(--bright-error-cell-color) 8px,
        var(--bright-error-cell-color) 16px
    );
    background-clip: content-box;
    opacity: 0.99; /* [1] */
    background-size: 4px var(--patternHeight); /* 16 * sqrt(2) */
}

body:not(.___) pluto-cell.running.errored > pluto-trafficlight::after {
    background: repeating-linear-gradient(
        -45deg,
        var(--light-error-cell-color),
        var(--light-error-cell-color) 8px,
        var(--bright-error-cell-color) 8px,
        var(--bright-error-cell-color) 16px
    );
    background-clip: content-box;
    opacity: 0.99; /* [1] */
    background-size: 4px var(--patternHeight); /* 16 * sqrt(2) */
}

/* Define --patternHeight for this keyframes animation to work! */
@keyframes scrollbackground {
    0% {
        transform: translate(0px, 0px);
    }
    100% {
        transform: translate(0, calc(10 * var(--patternHeight)));
    }
}

/* BUTTONS */

pluto-cell > button > span,
pluto-input > button > span {
    pointer-events: none;
}

@media screen and (any-pointer: fine) {
    pluto-cell > button,
    pluto-input > button,
    pluto-runarea > button,
    pluto-shoulder > button,
    pluto-cell > pluto-runarea {
        opacity: 0;
        /* to make it feel smooth: */
        transition: opacity 0.25s ease-in-out;
    }
    .export_small_btns button,
    button.toggle_export,
    button.start_stop_recording,
    pluto-cell:hover > button,
    pluto-cell:hover > pluto-input > button,
    pluto-cell > pluto-runarea > button,
    pluto-cell:hover > pluto-shoulder > button {
        opacity: 0.4;
        transition: opacity 0.25s ease-in-out;
    }
    .export_small_btns button:hover,
    button.toggle_export:hover,
    button.start_stop_recording:hover,
    .overlay-button button:hover,
    pluto-cell > button:hover,
    pluto-cell > pluto-input > button:hover,
    pluto-cell > pluto-runarea > button:hover,
    pluto-cell > pluto-shoulder > button:hover,
    pluto-cell:hover > pluto-runarea {
        opacity: 1;
        /* to make it feel snappy: */
        transition: opacity 0.05s ease-in-out;
    }
}
/* ... */

